--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 body{
     display: grid;
-    grid-template: 20vh 80vh / 15vw 65vw 20vw;
+    grid-template: 20vh 80vh / 15vw 66vw 19vw;
 }
 
 .sidebar{
@@ -21,16 +21,99 @@ body{
 
 .projects{
     display: grid;
-    grid-template: repeat(3, 25vh ) / repeat(2, 30vw);
+    grid-template: repeat(3, 24.5vh ) / repeat(2, 33vw);
+}
+
+.main > h1{
+    margin-left: 29px;
+    margin-top: 10px;
 }
 
 .project{
     background-color: silver;
-    margin: 1.5vh 1.5vw;
-    padding: 10px 30px 0 40px;
+    margin: 1.5vh .75vw 1.5vh 1vw;
+    padding: 20px 30px 0 40px;
     border-radius: 4%;
     border-left: 10px solid orange;
+    text-align: left;
+    overflow: hidden;
+    overflow-wrap: break-word;
+    position: relative;
 }
+
+.project > h2 {
+    width: 10vw;
+    font-size: 1.4em;
+}
+
+.project > p{
+    font-size: 1em;
+    width: 16vw;
+}
+
+.icons{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    left:90%;
+    top: 50%;
+
+}
+
+.icons > ion-icon{
+    padding: 2px;
+    font-size: 1.3em;
+}
+
+ion-icon:hover{
+    cursor: pointer;
+    transform: scale(1.3);
+}
+
+.side-stuff{
+    display: grid;
+    grid-template-rows: 62px 30vh 36px 36.4vh;
+    margin-right: 1.5vw;
+    margin-left: .5vw;
+}
+
+.announcements, .trending{
+   text-align: left;
+   background-color: grey;
+   border-radius: 2%;
+   padding: 10px;
+
+}
+
+.anH1{
+    margin-top: 20px;
+    font-size: 1.5rem;
+}
+
+.trH1{
+    font-size: 1.5rem;
+    margin-top: 10px;
+}
+
+.trending{
+    display: grid;
+    grid-template-rows: repeat(4, 1fr);
+}
+
+.trending-topic{
+    align-items: center;
+    display:grid;
+    grid-template: 2vh 2vh / 5vw 10vw;
+    text-align: left;
+    margin-top: 2vh;
+}
+
+.trending-topic > ion-icon{
+    margin-left: 2vw;
+    font-size: 3em;
+    grid-row: 1 /span 2;
+}
+
 
 
 
