--- a/style.css
+++ b/style.css
@@ -65,14 +65,14 @@ body{
     font-size: 1.3em;
 }
 
-ion-icon:hover{
+.icons> ion-icon:hover{
     cursor: pointer;
     transform: scale(1.3);
 }
 
 .side-stuff{
     display: grid;
-    grid-template-rows: 62px 30vh 36px 36.4vh;
+    grid-template-rows: 62px 30vh 40px 36vh;
     margin-right: 1.5vw;
     margin-left: .5vw;
 }
@@ -82,6 +82,7 @@ ion-icon:hover{
    background-color: grey;
    border-radius: 2%;
    padding: 10px;
+   overflow: hidden;
 
 }
 
@@ -103,17 +104,37 @@ ion-icon:hover{
 .trending-topic{
     align-items: center;
     display:grid;
-    grid-template: 2vh 2vh / 5vw 10vw;
+    grid-template: 2.5vh 2.5vh / 5vw 10vw;
     text-align: left;
     margin-top: 2vh;
+    overflow: hidden;
 }
 
 .trending-topic > ion-icon{
     margin-left: 2vw;
     font-size: 3em;
-    grid-row: 1 /span 2;
+    grid-row: 1 / span 2;
 }
 
+.announcements{
+    display: grid;
+    padding: 25px;
+
+}
+
+.announcement{
+    text-align: left;
+}
+
+.announcement > h2{
+    font-size: 1em;
+}
+
+.announcement > p{
+    font-size: .75em;
+    border-bottom: 1px solid black;
+    padding-bottom: 7px;
+}
 
 
 
